--- a/MeetingPlanner/Views/LoginView.xaml
+++ b/MeetingPlanner/Views/LoginView.xaml
@@ -1,12 +1,12 @@
-﻿<Window x:Class="MeetingPlanner.Views.LoginView"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:MeetingPlanner.Views"
-        xmlns:vm="clr-namespace:MeetingPlanner.ViewModels"
-        mc:Ignorable="d"
-        Title="LoginView" Height="250" Width="300">
+﻿<UserControl x:Class="MeetingPlanner.Views.LoginView"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:local="clr-namespace:MeetingPlanner.Views"
+             xmlns:vm="clr-namespace:MeetingPlanner.ViewModels"
+             mc:Ignorable="d"
+             d:DesignHeight="250" d:DesignWidth="300">
 
     <Grid Margin="10">
         <Grid.RowDefinitions>
@@ -31,6 +31,9 @@
 
         <TextBlock Grid.Row="3" Text="{Binding ErrorMessage}" Foreground="Red" HorizontalAlignment="Center" Margin="0,5,0,0"/>
 
-        <Button Grid.Row="4" Content="Login" Command="{Binding LoginCommand}" Margin="0,10,0,0" />
+        <StackPanel Grid.Row="4" Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,10,0,0">
+            <Button Content="Login" Command="{Binding LoginCommand}" Margin="0,0,10,0" />
+            <Button Content="Go to Register" Click="GoToRegister_Click" />
+        </StackPanel>
     </Grid>
-</Window>
+</UserControl>
