--- a/MeetingPlanner/Views/RegisterView.xaml
+++ b/MeetingPlanner/Views/RegisterView.xaml
@@ -1,34 +1,44 @@
-﻿<Window x:Class="MeetingPlanner.Views.RegisterView"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:MeetingPlanner.Views"
-        xmlns:vm="clr-namespace:MeetingPlanner.ViewModels"
-        mc:Ignorable="d"
-        Title="RegisterView" Height="300" Width="300">
+﻿<UserControl x:Class="MeetingPlanner.Views.RegisterView"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:local="clr-namespace:MeetingPlanner.Views"
+             xmlns:vm="clr-namespace:MeetingPlanner.ViewModels"
+             mc:Ignorable="d"
+             d:DesignHeight="300" d:DesignWidth="300">
 
     <Grid Margin="10">
         <Grid.RowDefinitions>
-            <Alignment="Center" Margin="0,0,0,10"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
 
-            <StackPanel Grid.Row="1">
-                <Label Content="Username:"/>
-                <TextBox Text="{Binding Username, UpdateSourceTrigger=PropertyChanged}"/>
-            </StackPanel>
+        <TextBlock Text="Register" FontSize="20" HorizontalAlignment="Center" Margin="0,0,0,10"/>
 
-            <StackPanel Grid.Row="2">
-                <Label Content="Password:"/>
-                <PasswordBox x:Name="PasswordBox" PasswordChanged="PasswordBox_PasswordChanged"/>
-            </StackPanel>
+        <StackPanel Grid.Row="1">
+            <Label Content="Username:"/>
+            <TextBox Text="{Binding Username, UpdateSourceTrigger=PropertyChanged}"/>
+        </StackPanel>
 
-            <StackPanel Grid.Row="3">
-                <Label Content="Confirm Password:"/>
-                <PasswordBox x:Name="ConfirmPasswordBox" PasswordChanged="ConfirmPasswordBox_PasswordChanged"/>
-            </StackPanel>
+        <StackPanel Grid.Row="2">
+            <Label Content="Password:"/>
+            <PasswordBox x:Name="PasswordBox" PasswordChanged="PasswordBox_PasswordChanged"/>
+        </StackPanel>
 
-            <TextBlock Grid.Row="4" Text="{Binding ErrorMessage}" Foreground="Red" HorizontalAlignment="Center" Margin="0,5,0,0"/>
+        <StackPanel Grid.Row="3">
+            <Label Content="Confirm Password:"/>
+            <PasswordBox x:Name="ConfirmPasswordBox" PasswordChanged="ConfirmPasswordBox_PasswordChanged"/>
+        </StackPanel>
 
-            <Button Grid.Row="5" Content="Register" Command="{Binding RegisterCommand}" Margin="0,10,0,0"/>
+        <TextBlock Grid.Row="4" Text="{Binding ErrorMessage}" Foreground="Red" HorizontalAlignment="Center" Margin="0,5,0,0"/>
+
+        <StackPanel Grid.Row="5" Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,10,0,0">
+            <Button Content="Register" Command="{Binding RegisterCommand}" Margin="0,0,10,0" />
+            <Button Content="Go to Login" Click="GoToLogin_Click" />
+        </StackPanel>
     </Grid>
-</Window>
+</UserControl>
