--- a/MeetingPlanner/Views/HomeView.xaml
+++ b/MeetingPlanner/Views/HomeView.xaml
@@ -1,13 +1,32 @@
 ﻿<UserControl x:Class="MeetingPlanner.Views.HomeView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:local="clr-namespace:MeetingPlanner.Views"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              mc:Ignorable="d"
              d:DesignHeight="450" d:DesignWidth="800">
-
     <Grid>
-        <TextBlock Text="Welcome to the Home Page!" FontSize="24" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <TabControl>
+            <TabItem Header="Account">
+                <Grid Margin="20">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
+
+                    <StackPanel Grid.Row="0" Orientation="Horizontal" VerticalAlignment="Center">
+                        <Image x:Name="AvatarImage" Width="100" Height="100" Margin="0,0,20,0"/>
+                        <Button Content="Change Avatar" Click="ChangeAvatarButton_Click" Background="LightBlue" Foreground="White" BorderBrush="LightBlue" BorderThickness="1" Padding="10"/>
+                    </StackPanel>
+
+                    <StackPanel Grid.Row="1" Margin="0,20,0,0">
+                        <TextBox x:Name="FirstNameTextBox" Margin="0,0,0,10"/>
+                        <TextBox x:Name="LastNameTextBox"  Margin="0,0,0,20"/>
+                        <Button Content="Save Changes" Click="SaveChangesButton_Click" Background="LightBlue" Foreground="White" BorderBrush="LightBlue" BorderThickness="1" Padding="10"/>
+                    </StackPanel>
+                </Grid>
+            </TabItem>
+            <!-- Добавьте другие вкладки здесь -->
+        </TabControl>
     </Grid>
 </UserControl>
