--- a/MeetingPlanner/Views/HomeView.xaml
+++ b/MeetingPlanner/Views/HomeView.xaml
@@ -3,6 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+             xmlns:views="clr-namespace:MeetingPlanner.Views"
              mc:Ignorable="d"
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
@@ -15,17 +17,35 @@
                     </Grid.RowDefinitions>
 
                     <StackPanel Grid.Row="0" Orientation="Horizontal" VerticalAlignment="Center">
-                        <Image x:Name="AvatarImage" Width="100" Height="100" Margin="0,0,20,0"/>
+                        <Image x:Name="AvatarImage" Width="100" Height="100" Margin="0,0,20,0" Source="{Binding AvatarPath}"/>
                         <Button Content="Change Avatar" Click="ChangeAvatarButton_Click" Background="LightBlue" Foreground="White" BorderBrush="LightBlue" BorderThickness="1" Padding="10"/>
+                        <Label Content="First Name:" Margin="0,0,0,5"/>
+                        <Label Content="{Binding FirstName}" Margin="0,0,0,10"/>
+                        <Label Content="Last Name:" Margin="0,0,0,5"/>
+                        <Label Content="{Binding LastName}" Margin="0,0,0,10"/>
                     </StackPanel>
 
                     <StackPanel Grid.Row="1" Margin="0,20,0,0">
-                        <TextBox x:Name="FirstNameTextBox" Margin="0,0,0,10"/>
-                        <TextBox x:Name="LastNameTextBox"  Margin="0,0,0,20"/>
-                        <Button Content="Save Changes" Click="SaveChangesButton_Click" Background="LightBlue" Foreground="White" BorderBrush="LightBlue" BorderThickness="1" Padding="10"/>
+                        <TextBox Text="{Binding FirstName, UpdateSourceTrigger=PropertyChanged}" Margin="0,0,0,10"/>
+                        <TextBox Text="{Binding LastName, UpdateSourceTrigger=PropertyChanged}" Margin="0,0,0,20"/>
+                        <Button Content="Save Changes" Command="{Binding SaveChangesCommand}" Background="LightBlue" Foreground="White" BorderBrush="LightBlue" BorderThickness="1" Padding="10"/>
+                        <Button Content="Logout" Command="{Binding LogoutCommand}" Background="Red" Foreground="White" BorderBrush="Red" BorderThickness="1" Padding="10" Margin="0,10,0,0"/>
                     </StackPanel>
                 </Grid>
             </TabItem>
+
+            <!-- Calendar Tab -->
+            <TabItem Header="Calendar">
+                <Grid>
+                    <Calendar HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="10"/>
+                </Grid>
+            </TabItem>
+
+            <!-- Contacts Tab -->
+            <TabItem Header="Contacts">
+                <views:ContactsView DataContext="{Binding ContactsViewModel}"/>
+            </TabItem>
+
             <!-- Добавьте другие вкладки здесь -->
         </TabControl>
     </Grid>
