--- a/MeetingPlanner/App.xaml
+++ b/MeetingPlanner/App.xaml
@@ -2,8 +2,21 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:MeetingPlanner"
+             xmlns:converters="clr-namespace:MeetingPlanner.Converters"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
+        <ResourceDictionary>
+            <converters:StringToVisibilityConverter x:Key="StringToVisibilityConverter"/>
 
+            <!-- Стиль для кнопок (опционально) -->
+            <Style TargetType="Button">
+                <Setter Property="Background" Value="#6a7eee"/>
+                <Setter Property="Foreground" Value="White"/>
+                <Setter Property="BorderThickness" Value="0"/>
+                <Setter Property="Padding" Value="10"/>
+                <Setter Property="Margin" Value="5"/>
+                <Setter Property="Cursor" Value="Hand"/>
+            </Style>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
