--- a/MeetingPlanner/Views/CalendarView.xaml
+++ b/MeetingPlanner/Views/CalendarView.xaml
@@ -1,13 +1,17 @@
 ﻿<UserControl x:Class="MeetingPlanner.Views.CalendarView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:sys="clr-namespace:System;assembly=mscorlib"
-             mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             xmlns:converters="clr-namespace:MeetingPlanner.Converters"
+             mc:Ignorable="d"
+             d:DesignHeight="550" d:DesignWidth="800">
 
     <UserControl.Resources>
+        <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
+        <converters:HasEventConverter x:Key="HasEventConverter"/>
+        <converters:TimeSpanConverter x:Key="TimeSpanConverter"/>
         <Style TargetType="Button" x:Key="PrimaryButton">
             <Setter Property="Background" Value="#6a7eee"/>
             <Setter Property="Foreground" Value="White"/>
@@ -21,6 +25,8 @@
             <Setter Property="Margin" Value="0 0 0 10"/>
             <Setter Property="Padding" Value="5"/>
         </Style>
+
+
     </UserControl.Resources>
 
     <Grid>
@@ -31,13 +37,58 @@
 
         <!-- Calendar -->
         <Calendar Grid.Column="0" Margin="10"
-                 SelectedDate="{Binding SelectedDate, Mode=TwoWay}"
-                 DisplayDate="{Binding SelectedDate}"
-                 SelectionMode="SingleDate"
-                 SelectedDatesChanged="Calendar_SelectedDatesChanged"/>
+                  SelectedDate="{Binding SelectedDate, Mode=TwoWay}"
+                  DisplayDate="{Binding SelectedDate}"
+                  SelectionMode="SingleDate"
+                  SelectedDatesChanged="Calendar_SelectedDatesChanged">
+            <Calendar.CalendarDayButtonStyle>
+                <Style TargetType="CalendarDayButton">
+                    <Setter Property="Background" Value="Transparent"/>
+                    <Style.Triggers>
+                        <!-- Selected date -->
+                        <DataTrigger Binding="{Binding IsSelected}" Value="True">
+                            <Setter Property="Background" Value="LightBlue"/>
+                        </DataTrigger>
+
+                        <!-- Dates with events -->
+                        <DataTrigger Value="True">
+                            <DataTrigger.Binding>
+                                <MultiBinding Converter="{StaticResource HasEventConverter}">
+                                    <Binding Path="DataContext.Events" 
+                                             RelativeSource="{RelativeSource AncestorType=Calendar}"/>
+                                    <Binding Path="Date"/>
+                                </MultiBinding>
+                            </DataTrigger.Binding>
+                            <Setter Property="Background" Value="LightGreen"/>
+                            <Setter Property="ToolTip">
+                                <Setter.Value>
+                                    <ToolTip>
+                                        <ItemsControl ItemsSource="{Binding DataContext.GetEventsForDate(Date), 
+                                                             RelativeSource={RelativeSource AncestorType=Calendar}}">
+                                            <ItemsControl.ItemTemplate>
+                                                <DataTemplate>
+                                                    <StackPanel Margin="5">
+                                                        <TextBlock Text="{Binding Title}" FontWeight="Bold"/>
+                                                        <StackPanel Orientation="Horizontal">
+                                                            <TextBlock Text="{Binding StartTime, StringFormat='{}{0:HH:mm}'}"/>
+                                                            <TextBlock Text=" - "/>
+                                                            <TextBlock Text="{Binding EndTime, StringFormat='{}{0:HH:mm}'}"/>
+                                                        </StackPanel>
+                                                    </StackPanel>
+                                                </DataTemplate>
+                                            </ItemsControl.ItemTemplate>
+                                        </ItemsControl>
+                                    </ToolTip>
+                                </Setter.Value>
+                            </Setter>
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </Calendar.CalendarDayButtonStyle>
+        </Calendar>
 
         <!-- Event Form -->
-        <Border Grid.Column="1" Background="#F0F5FF" Padding="15"
+        <Border Grid.Column="1" Background="#3F888F" Padding="15"
                Visibility="{Binding IsEventFormVisible, Converter={StaticResource BooleanToVisibilityConverter}}">
             <ScrollViewer VerticalScrollBarVisibility="Auto">
                 <StackPanel>
@@ -59,39 +110,38 @@
                         </Grid.ColumnDefinitions>
 
                         <StackPanel Grid.Column="0" Margin="0 0 5 0">
+                            <Label Content="Start Date"/>
+                            <DatePicker SelectedDate="{Binding StartDate, Mode=TwoWay}"/>
                             <Label Content="Start Time"/>
-                            <DatePicker SelectedDate="{Binding NewEvent.StartTime}"/>
-                            <ComboBox SelectedItem="{Binding NewEvent.StartTime.TimeOfDay}">
-                                <!-- Time slots -->
-                                <sys:TimeSpan>08:00:00</sys:TimeSpan>
-                                <sys:TimeSpan>09:00:00</sys:TimeSpan>
-                                <sys:TimeSpan>10:00:00</sys:TimeSpan>
-                                <!-- Add more time slots as needed -->
+                            <ComboBox SelectedItem="{Binding StartTime, Mode=TwoWay}"
+                                      ItemsSource="{Binding TimeSlots}">
+                                <ComboBox.ItemTemplate>
+                                    <DataTemplate>
+                                        <TextBlock Text="{Binding Converter={StaticResource TimeSpanConverter}}"/>
+                                    </DataTemplate>
+                                </ComboBox.ItemTemplate>
                             </ComboBox>
                         </StackPanel>
 
                         <StackPanel Grid.Column="1" Margin="5 0 0 0">
+                            <Label Content="End Date"/>
+                            <DatePicker SelectedDate="{Binding EndDate, Mode=TwoWay}"/>
                             <Label Content="End Time"/>
-                            <DatePicker SelectedDate="{Binding NewEvent.EndTime}"/>
-                            <ComboBox SelectedItem="{Binding NewEvent.EndTime.TimeOfDay}">
-                                <sys:TimeSpan>09:00:00</sys:TimeSpan>
-                                <sys:TimeSpan>10:00:00</sys:TimeSpan>
-                                <sys:TimeSpan>11:00:00</sys:TimeSpan>
+                            <ComboBox SelectedItem="{Binding EndTime, Mode=TwoWay}"
+                                      ItemsSource="{Binding TimeSlots}">
+                                <ComboBox.ItemTemplate>
+                                    <DataTemplate>
+                                        <TextBlock Text="{Binding Converter={StaticResource TimeSpanConverter}}"/>
+                                    </DataTemplate>
+                                </ComboBox.ItemTemplate>
                             </ComboBox>
                         </StackPanel>
                     </Grid>
 
                     <Label Content="Invite Friends"/>
-                    <ComboBox ItemsSource="{Binding Friends}" DisplayMemberPath="FullName"
-                             SelectedItem="{Binding SelectedFriend}">
-                        <ComboBox.ItemTemplate>
-                            <DataTemplate>
-                                <StackPanel Orientation="Horizontal">
-                                    <TextBlock Text="{Binding FullName}"/>
-                                </StackPanel>
-                            </DataTemplate>
-                        </ComboBox.ItemTemplate>
-                    </ComboBox>
+                    <ComboBox ItemsSource="{Binding Friends}"
+                              SelectedItem="{Binding SelectedFriend}"
+                              DisplayMemberPath="FullName"/>
 
                     <Button Content="Add" Command="{Binding AddAttendeeCommand}"
                            CommandParameter="{Binding SelectedFriend}"
@@ -103,7 +153,7 @@
                                 <StackPanel Orientation="Horizontal">
                                     <TextBlock Text="{Binding FullName}" VerticalAlignment="Center"/>
                                     <Button Content="Remove" Margin="10 0 0 0"
-                                           Command="{Binding DataContext.RemoveAttendeeCommand, 
+                                           Command="{Binding DataContext.RemoveAttendeeCommand,
                                                    RelativeSource={RelativeSource AncestorType=UserControl}}"
                                            CommandParameter="{Binding}"
                                            Style="{StaticResource PrimaryButton}"/>
@@ -116,6 +166,35 @@
                            Style="{StaticResource PrimaryButton}" Margin="0 10"/>
                 </StackPanel>
             </ScrollViewer>
+        </Border>
+
+        <!-- Event Details Popup -->
+        <Border Grid.ColumnSpan="2" Background="#80000000" Padding="20"
+               Visibility="{Binding IsEventDetailsVisible, Converter={StaticResource BooleanToVisibilityConverter}}">
+            <Border Background="White" Padding="20" CornerRadius="5">
+                <StackPanel MinWidth="300">
+                    <TextBlock Text="Event Details" FontSize="18" FontWeight="Bold" Margin="0 0 0 10"/>
+
+                    <TextBlock Text="{Binding SelectedEvent.Title}" FontSize="16" FontWeight="SemiBold"/>
+                    <TextBlock Text="{Binding SelectedEvent.Description}" Margin="0 5"/>
+                    <TextBlock Text="{Binding SelectedEvent.Location}" Margin="0 5"/>
+
+                    <TextBlock Text="{Binding SelectedEvent.StartTime, StringFormat='Start: {0:g}'}"/>
+                    <TextBlock Text="{Binding SelectedEvent.EndTime, StringFormat='End: {0:g}'}"/>
+
+                    <TextBlock Text="Attendees:" FontWeight="Bold" Margin="0 10 0 5"/>
+                    <ItemsControl ItemsSource="{Binding SelectedEvent.Attendees}">
+                        <ItemsControl.ItemTemplate>
+                            <DataTemplate>
+                                <TextBlock Text="{Binding FullName}"/>
+                            </DataTemplate>
+                        </ItemsControl.ItemTemplate>
+                    </ItemsControl>
+
+                    <Button Content="Close" Command="{Binding CloseEventDetailsCommand}"
+                           Style="{StaticResource PrimaryButton}" Margin="0 20 0 0" HorizontalAlignment="Right"/>
+                </StackPanel>
+            </Border>
         </Border>
     </Grid>
 </UserControl>
