--- a/MeetingPlanner/Views/HomeView.xaml
+++ b/MeetingPlanner/Views/HomeView.xaml
@@ -17,8 +17,7 @@
             <Setter Property="Height" Value="40"/>
             <Setter Property="Cursor" Value="Hand"/>
             <Setter Property="Padding" Value="15,5"/>
-            <Setter Property="Margin" Value="0,10,0,0"/>
-
+            <Setter Property="Margin" Value="10,0,0,0"/>
         </Style>
 
         <Style TargetType="Button" x:Key="DangerButtonStyle" BasedOn="{StaticResource PrimaryButtonStyle}">
@@ -34,12 +33,12 @@
         </Style>
     </UserControl.Resources>
 
-    <Grid Background="#6495ED">
+    <Grid Background="#3F888F">
         <Grid.RowDefinitions>
             <RowDefinition Height="98*"/>
             <RowDefinition Height="127*"/>
         </Grid.RowDefinitions>
-        <TabControl BorderThickness="0" Margin="0,0,0,-0.4" Grid.RowSpan="2">
+        <TabControl Background="#3F888F" BorderThickness="0" Margin="0,0,0,-0.4" Grid.RowSpan="2">
             <!-- Вкладка аккаунта -->
             <TabItem Header="Аккаунт">
                 <Grid Margin="20">
@@ -79,34 +78,43 @@
                                 <Button Content="Сменить аватар" 
                                         Click="ChangeAvatarButton_Click" 
                                         Style="{StaticResource PrimaryButtonStyle}"
-                                        Margin="30,15,0,0"/>
+                                        Margin="0,15,0,0" Width="144" Height="34"/>
                             </StackPanel>
                         </StackPanel>
                     </Border>
 
                     <!-- Нижняя часть с редактированием -->
-                    <Border Grid.Row="1" Background="#F0F5FF" CornerRadius="10" Margin="0,20,0,0" Padding="20">
-                        <StackPanel>
-                            <Label Content="Редактирование профиля" 
-                                   Foreground="#6a7eee" 
-                                   FontWeight="Bold"
-                                   FontSize="16"
-                                   Margin="0,0,0,15"/>
+                    <Border Grid.Row="1" Background="#F0F5FF" CornerRadius="10" Margin="0,10,0,10.2" Padding="20">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="Auto"/>
+                            </Grid.ColumnDefinitions>
 
-                            <Label Content="Имя" Foreground="#555"/>
-                            <TextBox Text="{Binding FirstName, UpdateSourceTrigger=PropertyChanged}"/>
+                            <StackPanel Grid.Column="0">
+                                <Label Content="Редактирование профиля" 
+                                       Foreground="#6a7eee" 
+                                       FontWeight="Bold"
+                                       FontSize="16"
+                                       Margin="0,0,0,0"/>
+                                <Label Content="Имя" Foreground="#555" Margin="0,0,467.2,0"/>
+                                <TextBox Text="{Binding FirstName, UpdateSourceTrigger=PropertyChanged}" Height="52" Margin="0,0,317.2,15"/>
+                                <Label Content="Фамилия" Foreground="#555" Margin="0,0,443.2,0" Height="29"/>
+                                <TextBox Text="{Binding LastName, UpdateSourceTrigger=PropertyChanged}" Height="41" Margin="0,0,293.2,15"/>
+                            </StackPanel>
 
-                            <Label Content="Фамилия" Foreground="#555"/>
-                            <TextBox Text="{Binding LastName, UpdateSourceTrigger=PropertyChanged}"/>
+                            <StackPanel Grid.Column="1" VerticalAlignment="Bottom" Margin="9.6,0,10,35.2">
+                                <Button Content="Сохранить изменения" 
+                                        Command="{Binding SaveChangesCommand}" 
+                                        Style="{StaticResource PrimaryButtonStyle}"
+                                        Width="180"/>
 
-                            <Button Content="Сохранить изменения" 
-                                    Command="{Binding SaveChangesCommand}" 
-                                    Style="{StaticResource PrimaryButtonStyle}"/>
-
-                            <Button Content="Выйти" 
-                                    Command="{Binding LogoutCommand}" 
-                                    Style="{StaticResource DangerButtonStyle}"/>
-                        </StackPanel>
+                                <Button Content="Выйти" 
+                                        Command="{Binding LogoutCommand}" 
+                                        Style="{StaticResource DangerButtonStyle}"
+                                        Margin="10,10,-0.4,0"/>
+                            </StackPanel>
+                        </Grid>
                     </Border>
                 </Grid>
             </TabItem>
@@ -127,7 +135,7 @@
                  Fill="#80c0ff" 
                  HorizontalAlignment="Right" 
                  VerticalAlignment="Bottom"
-                 Margin="0,0,20,19.6"
-                 Opacity="0.2" Grid.Row="1"/>
+                 Margin="0,0,10,179.6"
+                 Opacity="0.2" Grid.RowSpan="2"/>
     </Grid>
 </UserControl>
